--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>User Registration</title>
-  <link rel="stylesheet" href="pinky.css">
+  <link rel="stylesheet" href="index1.css">
 </head>
 <body>
   <h1>Add User</h1>
@@ -27,6 +27,6 @@
     </div>
   </div>
 
-  <script src="pinky.js"></script>
+  <script src="index1.js"></script>
 </body>
 </html>
